--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,11 @@ body {
     color: white;
 }
 
+.code-header .buttons {
+    display: flex;
+    align-items: center;
+}
+
 .template-select {
     padding: 5px 10px;
     background-color: #f5f5f5;
@@ -101,12 +106,17 @@ body {
     border-radius: 0;
 }
 
-.copy-icon {
+.copy-icon, .download-icon {
     background-color: #f5f5f5;
     color: #333;
     border: none;
     cursor: pointer;
     padding: 5px 10px;
+    height: 28px;
+}
+
+.download-icon {
+    margin-left: 5px;
 }
 
 .json-textarea {
