--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     padding: 10px 20px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 60px;
     box-sizing: border-box;
 }
@@ -137,6 +138,11 @@ body {
     padding: 5px 10px;
     height: 28px;
     border-radius: 6px;
+    transition: border-color 0.3s ease;
+}
+
+.copy-icon:hover, .download-icon:hover {
+    border-color: #ffd700;
 }
 
 .download-icon {
@@ -167,20 +173,20 @@ body {
 }
 
 .inject-preview-button {
-    width: 100%;
-    height: 100%;
-    background-color: black;
+    width: 100px;
+    height: 35px;
+    background-color: #107eff;
     color: white;
     border: none;
     text-transform: lowercase;
-    font-size: 16px;
+    font-size: 14px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     border-radius: 6px;
 }
 
 .inject-preview-button:hover {
-    background-color: #4CAF50; /* Green color on hover */
+    background-color: #75a4dc; /* Green color on hover */
 }
 
 .inject-preview-button:active {
@@ -190,7 +196,7 @@ body {
 .error-message {
     color: red;
     padding: 5px 10px;
-    background-color: #222;
+    background-color: #fff;
 }
 
 h2 {
